feat: impl open-api spec
